Fixed scrollbar-color in dark mode

--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@
     --a-fg-color: #6e9fff;
     --table-bg-color: #2C3034;
     --table-border-color: dimgrey;
+    scrollbar-color: #757575 #2E2E2E;
 }
 
 body {
